# stampbook

./: .gitignore  configure.ac
data/: Makefile.am
data/desktop/: stampbook.desktop
etc/: Info.plist.in  Makefile.am
po/: POTFILES.in  stampbook.pot
src/: Makefile.am  book.c  book.h  cp-button.h  draw-text.c  draw-text.h  page.c  page.h  stamp.c  stamp.h  stampbook.rc
